Cleanup code in neo4j-gql-status module